--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ $RECYCLE.BIN/
 *.lnk
 
 MI498-SP23-Bungie/Assets/Art/Models/_Blend Files/Sterling_Environment.blend1
+MI498-SP23-Bungie/Assets/Art/Models/_Blend Files/Sterling_Environment.blend1.meta
